<resources>
    <string name="app_name">XCJL</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="phoneNumberOrEmail">手机号码/用户名</string>
    <string name="pwd">密码</string>
    <string name="loginButtonText">登录</string>
    <string name="sdf">adf</string>
    <string name="headImage">头像</string>
    <string name="phoneNumberAndEmailHint">手机号码/用户名</string>
    <string name="passwordHint">请填写密码</string>

</resources>
